# skyxing-app

./: .gitignore  build-android.bat  build-log.txt  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
clients/: .gitignore
clients/android/: App.js  app.json  package.json
clients/shared/: api.js  sanitize.js
clients/windows/: index.html  package.json  tailwind.config.js  vite.config.js
scripts/: build.ps1
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AnimatedOutlet.jsx  Avatar.jsx  ErrorBoundary.jsx  ErrorReportModal.jsx  GlobalErrorModal.jsx  Layout.jsx  Loading.jsx  MenuList.jsx  SlideOutlet.jsx  Spinner.jsx  SubPageHeader.jsx
src/context/: AuthContext.jsx  SettingsContext.jsx  TransitionContext.jsx
src/hooks/: useRealtime.js  useSync.js
src/lib/: api.js  avatar.js  errorStore.js  markdown.js  openExternal.js  platform.js  sanitize.js
src/pages/: AccountInfoPage.jsx  AccountSecurityPage.jsx  AdminPage.jsx  ArticlePage.jsx  ConversationPage.jsx  EditPage.jsx  HomePage.jsx  LinkRedirect.jsx  LoginPage.jsx  MessagesPage.jsx  MinePage.jsx  NotFoundPage.jsx  NotificationsPage.jsx  PodcastPage.jsx  PrivacyPage.jsx  RegisterPage.jsx  SettingsPage.jsx  (+2 more)
update/: 1.0.0.md  1.1.0.md  1.1.1.md  1.1.2.md  1.1.3.md  1.1.4.md  1.1.5.md  1.2.0.md  1.2.1.md  1.2.2.md  1.2.3-a.md  1.2.3.md  1.2.4-a.md  1.2.4.md  1.2.5-a.md  1.2.5-beta.1.md  1.2.5-beta.2.md  1.2.5-beta.3.md  1.2.5-beta.4.md  1.2.5.md  2.0.0.md
(+26 files in other folders)
