[package]
name = "skyxing"
version = "1.2.5-beta.2"
description = "SkyXing - 跨平台博客客户端"
authors = ["kairuirain"]
edition = "2021"

[lib]
name = "skyxing_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
